--- a/index.html
+++ b/index.html
@@ -62,6 +62,51 @@
             
             <h2 class="text-center text-uppercase">lorem</h2>
 
+            <div class="d-flex row justify-content-between">
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+                <div class="col">
+                    <figure>
+                        <img src="https://picsum.photos/300/200" alt="">
+                    </figure>
+
+
+                </div>
+            </div>
+
 
             
             </div>
