--- a/index.html
+++ b/index.html
@@ -59,56 +59,87 @@
 
 
             <div class="container w-85 p-3">
-            
-            <h2 class="text-center text-uppercase">lorem</h2>
 
-            <div class="d-flex row justify-content-between">
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
+                <h2 class="text-center text-uppercase">lorem</h2>
+
+                <div class="d-flex row justify-content-between">
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
 
 
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
+
+
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
+
+
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
+
+
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
+
+
+                    </div>
+                    <div class="col-4">
+                        <figure>
+                            <img src="https://picsum.photos/300/200" alt="">
+                        </figure>
+
+
+                    </div>
                 </div>
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
 
 
-                </div>
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
 
-
-                </div>
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
-
-
-                </div>
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
-
-
-                </div>
-                <div class="col">
-                    <figure>
-                        <img src="https://picsum.photos/300/200" alt="">
-                    </figure>
-
-
-                </div>
             </div>
 
 
-            
+        </section>
+
+
+
+        <section class="p-3 bg-success text-white">
+
+            <div class="container w-75 p-10">
+
+                <h2 class="text-center text-uppercase ">Lorem, ipsum.</h2>
+
+                <div class="d-flex flex-sm-column flex-md-row justify-content-center">
+                    <p class="p-5">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
+                        reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
+                        adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
+                        facilis, animi dignissimos cum iste eveniet? Quidem dignissimos nam deleniti est eaque
+                        distinctio laborum doloremque repellat!
+                    </p>
+
+                    <p  class="p-5">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
+                        reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
+                        adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
+                        facilis, animi dignissimos cum iste eveniet? Quidem dignissimos nam deleniti est eaque
+                        distinctio laborum doloremque repellat!
+                    </p>
+                </div>
+
             </div>
 
 
