ancora non responsive

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
     <main>
 
+
+        <!-- start  -->
         <section class="p-3 bg-success text-white">
 
             <div class="container w-50 p-10 ">
@@ -54,7 +56,7 @@
         </section>
 
 
-
+        <!-- cards  -->
         <section>
 
 
@@ -115,15 +117,15 @@
         </section>
 
 
-
+        <!-- about  -->
         <section class="p-3 bg-success text-white">
 
             <div class="container w-75 p-10">
 
                 <h2 class="text-center text-uppercase ">Lorem, ipsum.</h2>
 
-                <div class="d-flex flex-sm-column flex-md-row justify-content-center">
-                    <p class="p-5">
+                <div class="d-flex  row flex-sm-column flex-md-row justify-content-center">
+                    <p class="col-6 p-5">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
                         reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
                         adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
@@ -131,7 +133,7 @@
                         distinctio laborum doloremque repellat!
                     </p>
 
-                    <p  class="p-5">
+                    <p class="p-5 col-6">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
                         reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
                         adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
@@ -145,10 +147,75 @@
 
         </section>
 
+        <!-- contact  -->
+        <section>
+            <div class="container w-75 p-10">
+
+                <h2 class="text-center text-uppercase p-5 ">Lorem, ipsum.</h2>
+
+                <p class="border-bottom border-3">
+                    Lorem?
+                </p>
+                <p class="border-bottom border-3">
+                    Lorem?
+                </p>
+                <p class="border-bottom border-3">
+                    Lorem?
+                </p>
+                <p class="border-bottom border-3 mb-5">
+                    Lorem?
+                </p>
+
+                <p class="border-top border-3">
+                    Lorem?
+                </p>
+
+
+            </div>
+
+
+        </section>
     </main>
 
 
     <footer>
+
+        <div class="main__footer p-3 bg-dark text-white">
+
+
+            <div class="container w-85 p-3">
+
+                <div class="d-flex  flex-sm-column flex-md-row justify-content-center">
+
+                    <div class="col4 p-2">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
+                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    </div>
+
+                    <div class="col4 p-2">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
+                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    </div>
+
+                    <div class="col4 p-2">
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
+                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
+        </div>
+
+
+        <div class="copyright p-3 mb-2 bg-secondary text-white">
+
+            <p class="text-center">Lorem, ipsum dolor.
+            </p>
+        </div>
 
     </footer>
 
