mw alle immagini

--- a/index.html
+++ b/index.html
@@ -64,45 +64,45 @@
 
                 <h2 class="text-center text-uppercase">lorem</h2>
 
-                <div class="d-flex row justify-content-between">
+                <div class="d-flex flex-wrap justify-content-between">
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
                     </div>
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
                     </div>
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
                     </div>
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
                     </div>
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
                     </div>
                     <div class="col-4">
                         <figure>
-                            <img src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
                         </figure>
 
 
@@ -125,7 +125,7 @@
                 <h2 class="text-center text-uppercase ">Lorem, ipsum.</h2>
 
                 <div class="d-flex  row flex-sm-column flex-md-row justify-content-center">
-                    <p class="col-6 p-5">
+                    <p class="col-6 p-5 ">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
                         reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
                         adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
