--- a/index.html
+++ b/index.html
@@ -95,49 +95,63 @@
         <section>
 
 
-            <div class="container  w-85 p-3">
+            <div class="container  p-3">
 
-                <h2 class="text-center text-uppercase">lorem</h2>
+                <h2 class="text-center text-uppercase title__font">Portfolio</h2>
 
-                <div class="d-flex flex-wrap justify-content-between">
-                    <div class="col-4">
+                <!-- star -->
+                <div class="star d-flex align-items-center justify-content-center mb-2">
+                    <div class="_border">
+
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="_border">
+
+                    </div>
+
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/cabin.png" alt="">
                         </figure>
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/cake.png" alt="">
                         </figure>
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/circus.png" alt="">
                         </figure>
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/game.png" alt="">
                         </figure>
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/safe.png" alt="">
                         </figure>
 
 
                     </div>
-                    <div class="col-4">
+                    <div class="col">
                         <figure>
-                            <img class="mw-100" src="https://picsum.photos/300/200" alt="">
+                            <img class="mw-100" src="img/submarine.png" alt="">
                         </figure>
 
 
