--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
                     </div>
 
 
-                    <p class=" text-uppercase" >
-                       Graphic artist - web designer - illustrator
+                    <p class=" text-uppercase">
+                        Graphic artist - web designer - illustrator
                     </p>
                 </div>
 
@@ -167,14 +167,29 @@
 
 
         <!-- about  -->
-        <section class="p-3 bg-success text-white">
+        <section class="p-3 bg__green text-white">
 
             <div class="container w-75 p-10">
 
-                <h2 class="text-center text-uppercase ">Lorem, ipsum.</h2>
+                <h2 class="text-center text-uppercase  title__font">About</h2>
 
-                <div class="d-flex  row flex-sm-column flex-md-row justify-content-center">
-                    <p class="col-6 p-5 ">
+
+                <!-- star -->
+                <div class="star d-flex align-items-center justify-content-center mb-2">
+                    <div class="_border">
+
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="_border">
+
+                    </div>
+
+                </div>
+
+                <div class="row row-cols-1 row-cols-md-2 g-4">
+                    <p class="col font__text ">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
                         reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
                         adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
@@ -182,13 +197,22 @@
                         distinctio laborum doloremque repellat!
                     </p>
 
-                    <p class="p-5 col-6">
+                    <p class="col font__text ">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos molestiae repudiandae
                         reiciendis? Rerum, dolorum labore quam perspiciatis saepe sit optio explicabo, dolore quas
                         adipisci facere ipsum necessitatibus beatae consectetur officiis recusandae minima voluptas
                         facilis, animi dignissimos cum iste eveniet? Quidem dignissimos nam deleniti est eaque
                         distinctio laborum doloremque repellat!
                     </p>
+                </div>
+                <div class="text-center mt-2">
+
+                    <button type="button" class="btn btn-outline-light text-center font__text">
+                        <span>
+                            <i class="fa-solid fa-download"></i>
+                        </span>
+                        Download</button>
+
                 </div>
 
             </div>
