--- a/index.html
+++ b/index.html
@@ -224,23 +224,37 @@
         <section>
             <div class="container w-75 p-10">
 
-                <h2 class="text-center text-uppercase p-5 ">Lorem, ipsum.</h2>
+                <h2 class="text-center text-uppercase mt-4 title__font ">Contact me</h2>
 
-                <p class="border-bottom border-3">
-                    Lorem?
+                <div class="star d-flex align-items-center justify-content-center mb-2">
+                    <div class="_border">
+
+                    </div>
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="_border">
+
+                    </div>
+
+                </div>
+
+
+                <p class="border-bottom border-2 border-dark font__text">
+                    Name
                 </p>
-                <p class="border-bottom border-3">
-                    Lorem?
+                <p class="border-bottom border-2 border-dark font__text">
+                    Email Address
                 </p>
-                <p class="border-bottom border-3">
-                    Lorem?
+                <p class="border-bottom border-2 border-dark font__text">
+                   Phone Number
                 </p>
-                <p class="border-bottom border-3 mb-5">
-                    Lorem?
+                <p class="border-bottom border-2 border-dark mb-5 font__text">
+                    Message
                 </p>
 
-                <p class="border-top border-3">
-                    Lorem?
+                <p class="border-top border-2 border-dark font__text">
+                    <button type="button" class="btn rounded bg__green mt-1">Send</button>
                 </p>
 
 
