Create icon "line" for Add Contact

--- a/index.html
+++ b/index.html
@@ -247,14 +247,20 @@
                     Email Address
                 </p>
                 <p class="border-bottom border-2 border-dark font__text">
-                   Phone Number
+                    Phone Number
                 </p>
                 <p class="border-bottom border-2 border-dark mb-5 font__text">
                     Message
                 </p>
 
-                <p class="border-top border-2 border-dark font__text">
-                    <button type="button" class="btn rounded bg__green mt-1">Send</button>
+                <p class="border-top border-2 border-dark font__text p__line ">
+                    <button type="button" class="btn rounded bg__green mt-1 p__line">Send</button>
+                    <i class="fa-solid fa-grip-lines line"></i>
+
+
+
+
+
                 </p>
 
 
