--- a/index.html
+++ b/index.html
@@ -273,26 +273,38 @@
 
     <footer>
 
-        <div class="main__footer p-3 bg-dark text-white">
+        <div class="main__footer p-3 bg__light text-white">
 
 
             <div class="container w-85 p-3">
 
-                <div class="d-flex  flex-sm-column flex-md-row justify-content-center">
+                <div class="row row-cols-1 row-cols-md-3 text-center font__text">
 
-                    <div class="col4 p-2">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
-                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    <div class="col p-2">
+                        <h3 class=" text-uppercase">location</h3>
+                        <p>2215 John Daniel Drive Clark, MO 54243</p>
                     </div>
 
-                    <div class="col4 p-2">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
-                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    <div class="col p-2">
+                        <h3 class=" text-uppercase">around the web</h3>
+                        <span class="border border-1 rounded-circle p-1 px-2">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </span>
+                        <span class="border border-1 rounded-circle p-1 px-1">
+                            <i class="fa-brands fa-google-plus-g"></i>
+                        </span>
+                        <span class="border border-1 rounded-circle p-1 px-1">
+                            <i class="fa-brands fa-twitter"></i>
+                        </span>
+                        <span class="border border-1 rounded-circle p-1 px-2">
+                            <i class="fa-brands fa-linkedin-in "></i>
+                        </span>
                     </div>
 
-                    <div class="col4 p-2">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquid neque laborum doloremque
-                        aliquam porro labore voluptatem maiores nihil harum totam. Debitis a facilis commodi doloribus.
+                    <div class="col p-2">
+                        <h3 class=" text-uppercase">about freelancer</h3>
+                        <p>Freelance is a free to use, open source Bootstrap them created by <span
+                                id="text__green">Start Bootstrap</span></p>
                     </div>
                 </div>
 
