Add Footer and check with Validator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Freelancer</title>
 </head>
 
-<body>
+<body class="">
 
 
     <header>
@@ -316,9 +316,10 @@
         </div>
 
 
-        <div class="copyright p-3 mb-2 bg-secondary text-white">
+        <div class="copyright p-3 bg__blue text-white fs-6">
 
-            <p class="text-center">Lorem, ipsum dolor.
+            <p class="text-center">
+                Copyright <span><i class="fa-solid fa-copyright"></i></span> You Website 2019
             </p>
         </div>
 
